# cmake-best-practices

./: .gitignore
ch01/: CMakeLists.txt
ch01/src/: main.cc
ch03/: CMakeLists.txt
ch03/hello_header_only/: CMakeLists.txt
ch03/hello_header_only/include/hello_header_only/: hello.hh
ch03/hello_lib/: CMakeLists.txt
ch03/hello_lib/include/hello/: hello.hh
ch03/hello_lib/src/: hello.cc  internal.cc  internal.hh
ch03/hello_object/: CMakeLists.txt
ch03/hello_object/include/hello_object/: hello.hh
ch03/hello_object/src/: hello.cc
ch03/hello_world_standalone/: CMakeLists.txt
ch03/hello_world_standalone/src/: main.cc
ch03/src/: main.cc
ch04/ex01_executable/: CMakeLists.txt
ch04/ex01_executable/src/: main.cc
ch04/ex02_static/: CMakeLists.txt
ch04/ex02_static/include/ex02_static/: lib.hh
ch04/ex02_static/src/: lib.cc
ch04/ex03_file/: CMakeLists.txt  ch04_greeter.py  ch04_greeter_content
ch04/ex04_directory/: CMakeLists.txt
